prevent SkiaSalBitmap::Scale() from breaking indexed bitmaps (tdf#134574)

Since the actual scaling is done later at some unknown time,
the palette mustn't change, but scaling can change colors.

Change-Id: Ie254c8b31993d9d509c32a730dd8c8b5d3cb2256